--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
     <h3>Guard</h3>
     <hr>
     <div class="jianjie">
-      <img src="/guard/img/img-head.jpg" style="width: 140px" class="img-circle">
+      <img src="/img/img-head.jpg" style="width: 140px" class="img-circle">
     </div>
     <p class="text-center">
     <br>
