--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@ layout: default
   <div class="col-md-4">
     <h3>Guard</h3>
     <hr>
-    <div class="jianjie">
-      <img src="/img/img-head.jpg" style="width: 140px" class="img-circle">
+    <div class="jianjie-box">
+      <div class="jianjie">
+        <img src="/img/img-head.jpg" style="width: 140px" class="img-circle">
+      </div>
     </div>
     <p class="text-center">
     <br>
