--- a/index.html
+++ b/index.html
@@ -31,15 +31,12 @@ layout: default
     <hr>
     <div class="jianjie-box">
       <div class="jianjie">
-        <img src="/img/img-head.jpg" style="width: 140px" class="img-circle">
+        <!-- <img src="/img/img-head.jpg" style="width: 140px" class="img-circle"> -->
       </div>
+      <h2 class="jianjie-text"></h2>
+      <hr>
     </div>
-    <p class="text-center">
     <br>
-    Hello World
-    </p>
-    <br>
-    <hr>
     <h3>标签</h3> 
     <hr> 
       <!--代码-->
